add canvas to JS and fill with red

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>Ping</title>
 		<link rel="stylesheet" href="css.css">
+		<script src="ping.js" />
 	</head>
 	<body>
-		
+		<center><canvas id="canvas" width="640" height="480"></canvas></center>
 	</body>
 </html>
