Fix typo in script tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Ping</title>
 		<link rel="stylesheet" href="css.css">
-		<script src="ping.js" />
+		<script src="ping.js"></script>
 	</head>
 	<body>
 		<center><canvas id="canvas" width="640" height="480"></canvas></center>
