dynamic canvas size

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<title>Ping</title>
 		<link rel="stylesheet" href="css.css">
-		
 	</head>
 	<body>
-		<center><canvas id="canvas" width="640" height="480"></canvas></center>
+		<canvas id="canvas"></canvas>
+        <script src="box2d.js"></script>
+        <script src="embox2d-helpers.js"></script>
+        <script src="embox2d-html5canvas-debugDraw.js"></script>
+        <script src="embox2d-html5canvas-testbed.js"></script>
 		<script src="ping.js"></script>
 	</body>
 </html>
