--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<p> Score: <span id="p1score">0</span> - <span id="p2score">0</span></p>
         <script src="box2d.js"></script>
         <script src="embox2d-helpers.js"></script>
         <script src="embox2d-html5canvas-debugDraw.js"></script>
